[tool.poetry]
name = "bokeh_chart_maker"
version = "0.1.0"
description = "Simple tool for creating and exporting bokeh plot without coding."
authors = ["Weverton Marques <wevertonms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bokeh = "^2.0.1"
pandas = "^1.0.3"
rope = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
